--- a/accueil.html
+++ b/accueil.html
@@ -193,7 +193,7 @@ nav.bottom-nav button.active{
      🔐 PROTECTION DE LA PAGE
   =================================================== */
 
-  const API_URL = "http://localhost:4000/api/auth";
+  const API_URL = (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') ? 'http://localhost:4000/api/auth' : '/api/auth';
   const accessToken = localStorage.getItem("accessToken");
 
   if (!accessToken) {
@@ -203,10 +203,6 @@ nav.bottom-nav button.active{
   /* ===================================================
      📡 RÉCUPÉRATION UTILISATEUR CONNECTÉ
   =================================================== */
-  fetch("http://localhost:4000/api/auth/me", {
-  headers: { Authorization: "Bearer " + accessToken }
-})
-
   fetch(`${API_URL}/me`, {
     headers: {
       Authorization: "Bearer " + accessToken
@@ -274,13 +270,23 @@ nav.bottom-nav button.active{
       attribution: "© OpenStreetMap"
     }).addTo(map);
 
-    if (user.role === "driver" && navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(pos => {
-        const { latitude, longitude } = pos.coords;
-        L.marker([latitude, longitude]).addTo(map)
-          .bindPopup("📍 Votre position");
-        map.setView([latitude, longitude], 14);
-      });
+    // Demander la géolocalisation pour les clients
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        pos => {
+          const { latitude, longitude } = pos.coords;
+          localStorage.setItem("userLat", latitude);
+          localStorage.setItem("userLng", longitude);
+          L.marker([latitude, longitude]).addTo(map)
+            .bindPopup("📍 Votre position");
+          map.setView([latitude, longitude], 14);
+        },
+        err => {
+          console.warn("Géolocalisation refusée ou indisponible:", err);
+          L.marker(coords).addTo(map)
+            .bindPopup("📍 Zone sélectionnée");
+        }
+      );
     } else {
       L.marker(coords).addTo(map)
         .bindPopup("📍 Zone sélectionnée");
@@ -337,7 +343,10 @@ async function loadDrivers() {
         .addTo(map)
         .bindPopup(`
           🚖 ${d.user.firstName}<br>
-          📞 ${d.user.phone}
+          📞 ${d.user.phone}<br><br>
+          <button onclick="callDriver('${d.user.phone}')">📞 Appeler</button>
+          <button onclick="openChat(${d.id})">💬 Chat</button>
+          <button onclick="shareLocation(${d.id})">📍 Partager position</button>
         `);
       driverMarkers.push(marker);
     });
@@ -387,6 +396,45 @@ function callDriver(phone) {
 function openChat(driverId) {
   localStorage.setItem("chatDriverId", driverId);
   window.location.href = "chat.html";
+}
+
+// 📍 Partager position avec chauffeur
+function shareLocation(driverId) {
+  const userLat = localStorage.getItem("userLat");
+  const userLng = localStorage.getItem("userLng");
+
+  if (!userLat || !userLng) {
+    alert("Votre position n'est pas disponible. Activez la géolocalisation.");
+    return;
+  }
+
+  if (confirm("Voulez-vous partager votre position avec ce chauffeur ?")) {
+    // Envoyer la position au chauffeur via l'API
+    fetch("http://localhost:4000/api/ride/share-location", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer " + accessToken
+      },
+      body: JSON.stringify({
+        driverId: driverId,
+        latitude: userLat,
+        longitude: userLng
+      })
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (data.message) {
+        alert("Position partagée avec le chauffeur !");
+      } else {
+        alert("Erreur lors du partage de la position.");
+      }
+    })
+    .catch(err => {
+      console.error("Erreur:", err);
+      alert("Erreur de connexion.");
+    });
+  }
 }
 </script>
 
