--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- FACE ARRIÈRE -->
       <section class="back-page">
         <div class="card-info">
-          <img src="COMO.jpg" alt="Comores" class="card-image">
+          <img src="image/como.jpg" alt="Comores" class="card-image">
 
           <h3>Voyagez autrement</h3>
 
